--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -182,7 +182,21 @@ body {
 }
 
 .back-image {
-  background-image: url('../assets/Back.png');
+  background-image: url('../assets/Back_02.png');
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  background-size: cover; /* default up to 1279px */
+}
+
+.back-image-2 {
+  background-image: url('../assets/Back_Rose.png');
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  background-size: cover; /* default up to 1279px */
+}
+
+.back-image-3 {
+  background-image: url('../assets/01.png');
   background-position: center bottom;
   background-repeat: no-repeat;
   background-size: cover; /* default up to 1279px */
@@ -190,6 +204,14 @@ body {
 
 @media (min-width: 1280px) {
   .back-image {
+    background-size: contain; /* 1280px and wider */
+  }
+
+    .back-image-2 {
+    background-size: contain; /* 1280px and wider */
+  }
+
+    .back-image-3 {
     background-size: contain; /* 1280px and wider */
   }
 }
